16 pages cut so far

--- a/chap3.tex
+++ b/chap3.tex
@@ -339,6 +339,44 @@ vision, mapping, or automated sensing, but may do much to address
 human discomfort with automation systems and concern with being
 outside of the control loop of their automated vehicle.
 
+
+Issues with attention have always been implicit within the discussion,
+since inattention is precisely the human quality that makes
+self-driving vehicles most necessary, at least rhetorically. %% But human
+%% supervisory control, in its practical applications, has much to teach
+%% us about the limits of human attention, and indeed such human factors
+%% research is the source of the NHTSA's claim that users of
+%% higher-levels of automation will not, and will not be expected to,
+%% monitor its operation. An often-used justification
+%% for entirely eliminating the human from the vehicle control loop is
+%% related to this tendency not to monitor the automation system:
+Experience shows that human operators who become reliant on the
+automation to perform a task are ill-equipped to take that task back
+in a crisis situation, and task hand-over is likely to be
+catastrophic \cite{AF447} \cite{Chowpaper}. %% A transportation systems
+%% researcher I spoke to 
+%% even cited this as the key reason he felt that highway-only
+%% self-driving systems would not work, and that companies would have to
+%% design for full automation everywhere.
+\footnote{Some researchers,
+  however, do suggest the opposite: Larsson suggests a less perfect
+  system might be better 
+  by some metrics, as experience with it is empirically related to
+  greater awareness of its weaknesses, and an expectation of having to
+take control intermittently \cite{larsson}. Notably, this paper and
+others like it are representative of human factors or ergonomics research.}
+
+%% The AF447 crash brings a number of human supervisory control questions to
+%% the fore. What is the proper role of pilots? And how quickly can they
+%% be expected to take back control authority over particular aspects of
+%% aircraft operation that have been previously delegated to an automated
+%% system? Are human pilots so unreliable that we should immediately push
+%% toward automating all aircraft operations? Or are autopilots so
+%% finicky that we should emphasize manual flying skills and reduce or
+%% eliminate the use of autopilots. Most likely, the correct answer is
+%% somewhere in between.
+
+
  While supervisory control is
 implicit in much popular writing about autonomous systems,
 it is not generally acknowledged as an important and
