--- a/intro.tex
+++ b/intro.tex
@@ -126,6 +126,11 @@ power of radio control to remove the driver from a full-size vehicle), may well 
 helped capture the popular imagination. This basic idea would reemerge
 a few years later.
 
+%% , one which included trains and aircraft, a farm, and an
+%% amusement park
+%% For their concept cars, GM separated the control
+%% functionality for steering from that for the maintenance of speed and
+%% distance between cars.
 The 1939 New York World's Fair opened to great acclaim. Covering over
 a thousand acres and attracting a total of over 44 million visitors,
 the fair was a massive public spectacle demonstrating the technical
@@ -141,28 +146,25 @@ scientism, or a similar phenomenon, is deeply involved in the ways
 modern technological narratives are generated and consumed.} that drove the
 dramatic technological displays \cite[p. 371]{nyeElectrifying}. The
 great success of the fair was 
-GM's Futurama exhibit: the line for the exhibit routinely stretched to
-two miles in length, and 28,000 people visited the exhibit each day.
-The Futurama exhibit presented an idea of what the world would look
-like in 1960, one which included trains and aircraft, a farm, and an
-amusement park \cite[p. 3-4]{wetmore}. But though GM's displays went far beyond them,
-automobiles were still the focal point: the bird's-eye view presented a
+GM's Futurama exhibit\footnote{The line for the exhibit routinely stretched to
+two miles in length, and 28,000 people visited the exhibit each day.}
+which presented an idea of what the world would look
+like in 1960 \cite[p. 3-4]{wetmore}. Automobiles were still the focal
+point: the bird's-eye view presented a 
 future city with multi-lane elevated expressways filled with largely
-automated vehicles. For their concept cars, GM separated the control
-functionality for steering from that for the maintenance of speed and
-distance between cars. The car's lateral position was maintained via
-curved barriers that would restore the position of the car using
+automated vehicles. The cars' lateral position was maintained via
+curved barriers that would restore the position of the cars using
 gravity, a low-tech solution to the more complicated problem of
 steering. However, the Futurama exhibit described that distance
 between cars would be maintained via a ``sophisticated system of radio
-control'' \cite[p. 5]{wetmore}. Prior to electronic circuits, this would have been
+control'' \cite[p. 5]{wetmore}.\footnote{Prior to electronic circuits, this would have been
 accomplished with vacuum tubes, a technology well-known at the time,
 and certainly subject to significant hurdles in terms of mechanical
 reliability. It was not until digital electronics were invented that
 hardware became the relatively stable component of driverless systems,
 with software reliability becoming the key issue \cite[p.
-  15]{wetmore}. But despite the 
-fragility of glass tubes traveling at high speed, and despite the fact
+  15]{wetmore}.} Despite the 
+fragility of glass vacuum tubes traveling at high speed, and despite the fact
 that the technology could work well only for sufficiently
 well-designed roads (high-speed highways, built specifically for these
 vehicles, with attendant infrastructural costs), such a system was
@@ -178,7 +180,7 @@ countryside, where working hours were reduced through electrification,
 and even driving could become leisure, the mere inhabitation of a
 device operating via radio control.
 
-But radio was not the only revolutionary medium to be included in
+Radio was not the only revolutionary medium to be included in
  portrayals of the self-driving car of the future. The cover of the
  April 1936 edition of the magazine \emph{Modern
    Mechanix} \cite{modernmechanix} betrays a 
@@ -362,7 +364,14 @@ already have run head on into a wall,'' he wrote, and the answer to
 this problem was the lightning speed of cybernetic control \cite{wienerOn}. But real
 developments in automated driving did not materialize, and research
 languished, out of the public eye, throughout the late 1960s and 1970s
-\cite[p. 10]{wetmore}.
+\cite[p. 10]{wetmore}. Instead of autonomous vehicles we got a push
+for an
+increasing array of safety systems designed to make vehicles more forgiving
+of human errors---starting with rudimentary
+mechanical automation such as seat belts, and continuing through
+airbags, ABS, and other more modern systems---that rose to public attention
+with \emph{Safety Last} and \emph{Unsafe at Any Speed}
+\cite{oconnellmyers} \cite{nader}. 
 
 \subsection{Research at the Turn of the Century}
 
@@ -408,8 +417,7 @@ VITA\footnote{VIsion Technology Application. The original VITA was a
   D811 Mercedes van, chosen in order to store both computing
   equipment, power supplies, and environmental control for those
   electronics \cite[p. 37]{ulmerVITA}.} used
-a CCIR\footnote{This is a particular video standard, but its specifics are
-  not important here.} analog video-camera signal processed through a framegrabber
+an analog video-camera signal processed through a framegrabber
 which would feed the visual information into the transputer-based
 parallel-processing system \cite[p. 38]{ulmerVITA}. The VITA-II
 system, scaled down to fit in 
@@ -477,12 +485,15 @@ real-world road environments,\footnote{These vehicles basically
   though hostile in many ways, is not nearly so complex as an urban or
 suburban road. The navigational approaches applied there are
 fundamentally different than those necessary for an every-day
-self-driving vehicle.} the Urban Challenge
+self-driving vehicle. John Leonard,
+  discussion with the author, December 3, 2014.} the Urban Challenge
 vehicles, both via their sensor setups and algorithmic approaches to
 navigation, can be interpreted as another step along the path to the
 modern self-driving car, as instantiated within Google's design approach. 
 
-But approaches today have a variety of forms. While Google is making
+\section{Automated Cars in 2015}
+
+Approaches today have a variety of forms. While Google is making
 headlines with its self-driving vehicle research, and is defining the
 look of the autonomous car with its roof mounted LIDAR scanner, other
 companies are developing vehicles with slightly different sensors and
@@ -579,43 +590,6 @@ optimistic and pessimistic viewpoints.
 \subsection{Short-term Promises}
 
 %reduce and deduplicate
-Some articles, especially from more
-scholarly establishments, bring up 
-the pioneering work done by Mercedes and Ernst
-Dickmanns in Germany in the 1990s \cite{HCRIDriverless}. But few connect
-autonomous vehicles today as part of a long research history going
-back to the 1960s, and an even longer set of engineering dreams going
-back at least to the 1920s. 
-
-The few historically-specific 
-dreams that do filter through into the narratives of autonomous
-technology \cite{CBSPetersen} 
-include the 1939 World's Fair, discussed
-in the introduction, at which auto companies
-previewed a city of the future. Its centerpiece, GM's Futurama
-exhibit, presented a bird's-eye view of a future city with multi-lane elevated
-expressways filled with largely automated vehicles. GM's Firebird concepts
-from the 1950s\footnote{Rarely mentioned are other contemporary research
-  initiatives, such as the work of
-  Vladimir Zworykin at RCA. His 
-  concept, inspired by ``railroad block signals,'' used circuits
-  embedded in the road to magnetically sense vehicle speed and
-  location. GM's working test system based on their ``Unicontrol''
-  joystick instead located much of the sensing and control within the car
-itself \cite[p. 8]{wetmore}. But this work too is not often
-remembered.} are also occasionally remembered due to their publicity
-and 
-subsequent cultural presence, \cite{walshVs} despite that the vehicles actually
-contained no autonomous technology \cite[p. 7]{wetmore}. They were
-themselves engineering fictions. DARPA's investments in automated
-driving are recalled more frequently, but largely stripped of their
-military valences and instead seen as the start of a vibrant civilian
-automated car project \cite{economistSR}.
-
-These historical moments are powerful because in their projections into the
-popular discourse, they cease to answer to logic and
-sense. They draw upon emotions, hopes, and aspirations. 
-
 
 One popular vision of this technology is fundamentally optimistic: it
 puts forward the
@@ -697,10 +671,12 @@ worked on MIT's entrant to the DARPA Urban Challenge in 2007, has gone
 on the record multiple times about his doubts, and has become a very
 public face for driverless car skepticism \cite{ramseyWhen} \cite{gomesCircles}.
 
-From all this, one might be excused for thinking this was simply an
-argument between the technophiles and the naysayers, the daring dreamers versus the
-conservative pragmatists. But there is much more to the story than is
-apparent in this simplistic narrative. Both popular visions of this
+%% From all this, one might be excused for thinking this was simply an
+%% argument between the technophiles and the naysayers, the daring dreamers versus the
+%% conservative pragmatists. But 
+
+There is much more to the story than is
+apparent in this simplistic dual-narrative. Both popular visions of this
 technology focus on the future, and do relatively little to
 investigate the past or present, how we got to 
 where we are now, or even what level of autonomy we currently see in
@@ -789,6 +765,21 @@ productive ways. This appreciation allows us to shift the fundamental
 questions we ask about technology in a way that is, hopefully,
 productive for research and policy-making.
 
+%% The deeper one 
+%% goes, the more ambivalent the mess becomes. Certain ideas seem
+%% constant across projects, but others differ wildly. Their stated goals
+%% often seem subtly off-set from their assumptions and end-products. And
+%% even more fundamentally, the idea of the ``self-driving'' vehicle,
+%% where the human does nothing at all, is hardly a self-evident one.
+
+%% \footnote{The time has not yet come when the social
+%% and cultural impacts can reasonably be predicted in a cohesive way.
+%% But, as I think such things are absolutely fundamental to the way we
+%% should think about new technologies, I am unwilling to drop them
+%% entirely. So what follows is a patchwork, though, I hope, an artful
+%% one.} Different technological possibilities produce several visions of
+%% what society might be, but e
+
 I originally set out to critically examine the cultural and social
 implications of self-driving vehicle technology. In my na\"{\i}vet\'{e}, I
 conceived of driverless cars as just-another-AI-technology, something
@@ -800,21 +791,10 @@ in profound and important ways. In an apt lesson for an early researcher,
 here was a thing that had not reached the stage of becoming, in
 Latour's parlance, a ``black box,'' despite the media's treatment of
 it as such \cite{LatourScience}. Below the surface, controversy
-bubbles. The deeper one 
-goes, the more ambivalent the mess becomes. Certain ideas seem
-constant across projects, but others differ wildly. Their stated goals
-often seem subtly off-set from their assumptions and end-products. And
-even more fundamentally, the idea of the ``self-driving'' vehicle,
-where the human does nothing at all, is hardly a self-evident one.
-Turning up other research paths---and indeed, numerous historical
+bubbles. Turning up other research paths---and indeed, numerous historical
 counterexamples---made it painfully clear that the story I wanted was
-not the story I could tell.\footnote{The time has not yet come when the social
-and cultural impacts can reasonably be predicted in a cohesive way.
-But, as I think such things are absolutely fundamental to the way we
-should think about new technologies, I am unwilling to drop them
-entirely. So what follows is a patchwork, though, I hope, an artful
-one.} Different technological possibilities produce several visions of
-what society might be, but each will ultimately have to come into
+not the story I could tell. Each social vision is
+contingent, and will ultimately have to come into
 contact not only with physical reality, but the social realms of law,
 technology, and public acceptance. My research materials have
 therefore consisted not only of public media portrayals of automated
@@ -829,10 +809,9 @@ vehicles within technical communities. I have also conducted a handful
 of one-hour interviews with 
 automated vehicle and transport researchers to attempt to gain
 internal perspective on their concerns and motivations. Rather than
-taking the visions as 
-my starting point, I have had to dig deeper: putting these visions in the context of
-historical fields and precedents, and shining light through their
-gaps. And that is what I hope this project has become, a 
+projecting from visions to cultural effects, I have had to dig deeper:
+putting these visions in the context of 
+historical fields and precedents, exposing their gaps. And I hope this project has become a  
 deep look into the ideologies and rhetorics of the self-driving car,
 one which hints at what society might be like once these
 vehicles are common, but more so investigates what different models for these vehicles
