--- a/main.bib
+++ b/main.bib
@@ -2130,6 +2130,22 @@
    year = 2007,
 }
 
+@BOOK{oconnellmyers,
+   author = "Jeffrey O'Connell and Arthur Myers",
+   title = "{S}afety {L}ast: {A}n {I}ndictment of the {A}uto {I}ndustry",
+   publisher = "Random House",
+   address = "New York, NY",
+   year = "1966",
+}
+
+@BOOK{nader,
+   author = "Ralph Nader",
+   title = "{U}nsafe at {A}ny {S}peed",
+   publisher = "Grossman",
+   address = "New York, NY",
+   year = "1965",
+}
+
 
 
 
